1.6.4
* Changed the first parameter to NotifyTxDel() to be more descriptive (than just TxID)
* Do not use VER_LOW_S for now (to verify mempool txs) as it is baning some peers
* Enforce CVS verification for blocks height 417312 or higher (not for testnet)
* Implemented BIP113 (Median time-past as endpoint for lock-time calculations)

1.6.3 - 2016-05-28
* Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
* WebUI/Miners: Removed BIP100 voting stats
* WebUI/Miners: Block version numbers are shown in a table, from a span of the consensus window
* Wallet: use sequence value of 0 for RBF type transactions (instead of unix timestamp as before)
* WebUI/MakeTx: Default sequence value changed to 0 and added "Final" checkbox
* WebUI/Transactions: Shows processing time of the txs and which are RBF enabled (non-final)
* Client: Implemented Replace-By-Fee for the memory pool
* Removed support for "alert" messages
* Tools/fetchtx: updated to the latest block explorers API
* Lib/script: added support for OP_CHECKSEQUENCEVERIFY opcode (enabled by VER_CSV flag) - BIP-112
* Lib/script: added support for all core's verification flags and updated the test suite to the latest one
* New tool "verify_tx.go", usefull for debugging scripts

1.6.2 - 2016-04-12
* Client: fixed crash on calling the consensus lib with empty pkscript
* Lib: Several compatibility fixes in the consensus checks on the block level
* Client: getheadres uses genesis block if no locator has been found
* Qdb: Memory bindings for Windows and Linux are being used automatically
* Client: each input's script is checked in a parallell for accepting tx to mempool
* Lib: simplified the way tx's inputs are checked in parallell goroutines

1.6.1 - 2016-04-06
* Client: network queue for txs processing increased to 2000
* Client: WebUI/Transactions - The fees chart shows age of a transaction (on hovering)
* Downloader: excessive memory consumption shall no longer be an issue